syntax = "proto3";
package otcgo;

option go_package = "grpc;grpc";

message OneTimeCodeGen {
  string identifier = 1;
}

message ReadCodeReq {
  string value = 1;
}

message OneTimeCodeResponse {
  string identifier = 1;
  int64 expiresAt = 2;
  string value = 3;
}

service OneTimeCodeService {
  rpc CreateCode(OneTimeCodeGen) returns (OneTimeCodeResponse) {}
  rpc ReadCode(ReadCodeReq) returns (OneTimeCodeResponse) {}
}
